--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+
+
 *{
 	margin: 0;
 	padding: 0;
@@ -11,7 +14,20 @@ html, body {
 	width: 100%;
 }
 
+
 /* #0B0B0B */
+
+#crsr{
+	height: 2.3vw;
+	width: 2.3vw;
+	border-radius: 50%;
+	/* background-color: white; */
+	border: 1px solid #ffffff7d;
+	position: fixed;
+	z-index: 9999;
+	mix-blend-mode: difference ;
+	transform: translate(-50%, -50%);
+}
 
 #loader{
 	height: 100%;
@@ -65,9 +81,11 @@ html, body {
 	text-transform: uppercase;
 	font-weight: 900;
 	opacity: 0;
-	animation-duration: 2s;
+	animation-duration: 1.5s;
 	animation-iteration-count: infinite;
 }
+
+
 
 @keyframes anime {
 	0% {
@@ -96,7 +114,7 @@ html, body {
 		-webkit-text-stroke: 1px #fff;
 		color: transparent;
 		font-weight: 500;
-		opacity: 0;
+		opacity: 1;
 	}
 }
 
@@ -110,4 +128,62 @@ html, body {
 	width: 100%;
 	background-color: #151515;
 	
+}
+
+
+#page1 #nav{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 2.3vw 5vw;
+	
+}
+
+#nav-part2 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 3vw;
+}
+
+#nav-part2 {
+	font-size: 0.8vw;
+	font-weight: 500;
+}
+
+.hero{
+	
+	width: 73%;
+	margin-left: 27%;
+	height: fit-content;
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+	position: relative;
+	z-index: 999;
+	
+}
+
+.hero:nth-child(2){
+	margin-top: 18vh;
+}
+
+.hero h1{
+	font-size: 7.2vw;
+	font-weight: 600;
+	text-transform: uppercase;
+	line-height: 7.2vw;
+}
+
+.hero h2, .hero h3{
+	font-size: 7.2vw;
+	font-weight: 600;
+	text-transform: uppercase;
+	line-height: 7.2vw;
+}
+
+.hero h3:hover{
+	-webkit-text-stroke:  2px #fff;
+	color: transparent;
+	font-weight: 500;
 }
