page 2 done.. moving towards page 3

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body{
 
 
 
-@keyframes anime {
+@keyframes loaderanime {
 	0% {
 		font-family: "plain light";
 		-webkit-text-stroke: 1px #fff;
@@ -148,7 +148,9 @@ body{
 	gap: 3vw;
 }
 
-#nav-part2 {
+
+
+#nav-part2 h4 {
 	font-size: 0.8vw;
 	font-weight: 500;
 }
@@ -158,13 +160,15 @@ body{
 	width: 73%;
 	margin-left: 27%;
 	height: fit-content;
-	overflow: hidden;
+	overflow-y: hidden;
 	display: flex;
 	align-items: center;
-	position: relative;
-	z-index: 999;
+	/* overflow-x: visible; */
+	
 	
 }
+
+
 
 .hero:nth-child(2){
 	margin-top: 18vh;
@@ -175,6 +179,18 @@ body{
 	font-weight: 600;
 	text-transform: uppercase;
 	line-height: 7.2vw;
+	position: relative;
+}
+
+
+#hero1::before {
+	content: "01";
+	position: absolute;
+	font-size: 3vw;
+	font-weight: 100;
+	font-family: "silk serif";
+	left: 20%;
+	top: 25%;
 }
 
 .hero h2, .hero h3{
@@ -182,9 +198,9 @@ body{
 	font-weight: 600;
 	text-transform: uppercase;
 	line-height: 7.2vw;
-	border-bottom: 
-	padding-bottom: 0.8vw;
-	transition: all ease 0.3s;
+	border-bottom: 0.5vw solid #fff
+	/* padding-bottom 0.8vw;
+	transition: all ease 0.3s; */
 }
 
 .hero h3:hover{
@@ -271,7 +287,19 @@ body{
 #page4-content h1{
 	font-size: 7vw;
 	text-transform: uppercase;
+	position: relative;
 }
+
+#page4-content h1::before {
+	content: "03";
+	position: absolute;
+	font-size: 3vw;
+	font-weight: 100;
+	font-family: "silk serif";
+	left: -12%;
+	top: 8%;
+}
+
 
 #page4-content .underline{
 	height: 1px;
@@ -335,5 +363,135 @@ body{
 #page5{
 	min-height: 100vh;
 	width: 100%;
+	position: relative;
+}
 
+.elem{
+	white-space: nowrap;
+	overflow-x: hidden;
+	margin-bottom: 1vw;
+}
+
+.elem h1{
+	font-size:  7vw;
+	/* background-color: red; */
+	-webkit-text-stroke: 1px #fff;
+	font-weight: 400;
+	text-transform: uppercase;
+	color: transparent;
+	display: inline-block;
+	margin-left: 16px;
+	animation-name: anime;
+	animation-duration: 12s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+
+@keyframes anime {
+	form{
+		transform: translateX(0);
+	}
+	to{
+		transform: translateX(calc(-100% - 20px));
+	}
+
+
+}
+
+
+.elem2{
+	white-space: nowrap;
+	overflow-x: hidden;
+	margin-bottom: -2vw;
+}
+
+.elem2 h1{
+	font-size:  7vw;
+	/* background-color: red; */
+	-webkit-text-stroke: 1px #fff;
+	font-weight: 400;
+	text-transform: uppercase;
+	color: transparent;
+	display: inline-block;
+	animation-name: anime;
+	animation-duration: 12s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-direction: reverse;
+}
+
+.elem span{
+	font-style: italic;
+	font-family: 'silk serif';
+	color: transparent;
+}
+
+.elem2 span{
+	font-style: italic;
+	font-family: 'silk serif';
+	color: transparent;
+}
+
+#footer {
+	height: 85vh;
+	width: 100%;
+	/* background-color: red; */
+	position: relative;
+	padding-left: 28vw;
+	padding-right: 2vw;
+}
+
+#footer h1{
+	font-size: 7vw;
+	text-transform: uppercase;
+	/* background-color: blue; */
+	position: relative;
+	
+}
+
+#footer h1::before {
+	content: "04";
+	position: absolute;
+	font-size: 3vw;
+	font-weight: 100;
+	font-family: "silk serif";
+	left: -12%;
+	top: 8%;
+}
+
+.underline{
+	height: 1px;
+	width: 100%;
+	background-color: #fff;
+	margin: 3vw 0;
+}
+
+#footer-div{
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
+	padding-right: 15vw;
+	padding-top: 4vw;
+	margin-bottom: 6vw;
+}
+
+#footer-div h6 {
+	font-size: 0.9vw;
+	margin-bottom: 1.5vw;
+	font-weight: 500;
+}
+
+.box {
+	width: 20%;
+}
+
+#footer-div h5{
+	font-size: 1.4vw;
+	font-weight: 500;
+	/* margin: 0.2vh 0; */
+}
+
+#footer>h5{
+	font-weight: 500;
+	font-size: 1vw;
 }
